# distributed-messaging-service

./: README.md
client/: client.py  server_spyne.py
server/: CMakeLists.txt  server.c
server/include/: lines.c  users_llist.c  users_llist.h
